discussion/kv_engine/183943/183943_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54776: Merge remote-tracking branch 'couchbase/mad-hatter'

* couchbase/mad-hatter:
  MB-54776: Don't return $XTOC=null

Change-Id: Ib8071f68e54193e7d04c29811183149370e97831

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-12-12 06:16:07.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-12-12 06:16:26.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/328873/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-12 06:42:15.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/381/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/tests/testapp/testapp_xattr.cc:2414:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/381/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/376/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_xattr.cc:2414:5: error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
    setBodyAndXattr(value, {{sysXattr, xattrVal}});
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_client_test.h:125:10: note: candidate function not viable: requires 3 arguments, but 2 were provided
    void setBodyAndXattr(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_client_test.h:111:10: note: candidate function not viable: requires 4 arguments, but 2 were provided
    void setBodyAndXattr(
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/376/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_xattr.cc:2414:5:
error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/376/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/550/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_xattr.cc(2414): error C2661: "TestappXattrClientTest::setBodyAndXattr": no overloaded function takes 2 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/550/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/393/ : FAILURE

Compile error at [2022-12-12T06:23:39.503Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2414:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/393/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/307/ : FAILURE

Compile error at [2022-12-12T06:24:26.198Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2414:50:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/307/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/390/ : FAILURE

Compile error at [2022-12-12T06:25:44.607Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2414:50:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/390/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/401/ : FAILURE

Compile error at [2022-12-12T06:19:34.151Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2414:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/401/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/384/ : FAILURE

Compile error at [2022-12-12T06:42:02.067Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2414:50:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/384/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/406/ : FAILURE

Compile error at [2022-12-12T06:28:31.388Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2414:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/406/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21715/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
